fix: column button z-index

--- a/src/components/site-pages/search-room/search-room.scss
+++ b/src/components/site-pages/search-room/search-room.scss
@@ -26,7 +26,7 @@
 
 .search-room-options-column-button {
   position: fixed;
-  z-index: 20;
+  z-index: 70;
   display: none;
   width: rem(40);
   height: rem(40);
